--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -28,7 +28,19 @@
       </div>  
     <% end %>
     
-    
+    <% if @comment.errors.any? %>
+      <div class="alert alert-danger" role="alert">
+        <div id="error_explanation">
+          <h2><%= @comment.errors.count %>件のエラーがあります。</h2>
+          <ul>
+          <% @comment.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %> </%>
+           </ul>
+        </div>
+      </div>
+    <% end %>
+ 
     
     <%= form_for(@comment, url: { controller: :comments, action: :create }) do |f| %>
       <div class="form-group">
