show.html.erb修正

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -36,7 +36,7 @@
           <ul>
           <% @comment.errors.full_messages.each do |msg| %>
             <li><%= msg %></li>
-          <% end %> </%>
+          <% end %> 
            </ul>
         </div>
       </div>
