--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -19,6 +19,7 @@
     <% @comments.each do |comment| %>
     
       <div class="media">
+         <%= image_tag(current_user.image_url, :size => "50x50", :alt => "プロフィール画像", :style => "float: left;") %>
         <div class="media-body">
           <%= simple_format(comment.body) %>
           <p class="text-muted">
@@ -28,6 +29,7 @@
         </div>
       </div>  
     <% end %>
+   
     
     <% if @comment.errors.any? %>
       <div class="alert alert-danger" role="alert">
@@ -50,6 +52,7 @@
         <%= f.text_area :body, class: "form-control" %>
       </div>
       <%= f.hidden_field :customer_id, value: @customer.id %>
+      <%= f.hidden_field :user_id, value: current_user.id %>
       <%= f.submit class: "btn btn-default" %>
     <% end %>
     
